# multi_query

./: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.in  query.cpp
